# open-tls-iot-client

./: CLAUDE.md  LICENSE  README.md
esp32/: CLAUDE.md  README.md  partitions.csv  sdkconfig
esp32/esp32.sdk33/: Makefile  README.md
esp32/esp32.sdk33/main/: app_wifi.c  button.c  button.h  cmd.c  cmd.h  mqtt.c  mqtt.h  open_tls.h  open_tls_main.c  periodical.c  periodical.h  (+7 more)
esp32/esp32.sdk42/: .gitignore  CMakeLists.txt  README.md  sdkconfig
esp32/esp32.sdk42/main/: CMakeLists.txt  app_wifi.c  app_wifi.h  button.h  cmd.c  component.mk  mqtt.c  open_tls_main.c  t_gpio.c  t_gpio.h  util.c  version.h
esp32/main/: app_wifi.c  cmd.c  cmd.h  mqtt.c  mqtt.h  open_tls.h  periodical.c  periodical.h  t_gpio.c  util.h
ifttt_webhook/: README.md  main.go
images/00arvhives/: README.md
images/app/: Secured MQTT Publish_icon_v2.ai
images/figures/: tt_schematic.drawio
ios/: CLAUDE.md  PROMPTS_NFC.txt  Podfile  README.md
ios/SecuredMQTTPublisher/: AES128ECBTextEncrypter.swift  ActionEditViewController.swift  AppDelegate.swift  Colors.swift  Core.swift  DataStore.swift  DeviceOwnerAuthenticator.swift  HomeViewController.swift  MQTTClient.swift  NFCTagWriter.swift  NFCTokenManager.swift  SceneDelegate.swift  SecuredMQTTPublisher-Bridging-Header.h  SettingsViewController.swift  SoundEffect.swift  Utilities.swift  ViewControllers.swift  Widgets.swift
ios/SecuredMQTTPublisher.xcodeproj/: project.pbxproj
ios/SecuredMQTTPublisher.xcworkspace/: contents.xcworkspacedata
test_tools/: CLAUDE.md  README.md
test_tools/publisher/: main.go
test_tools/subscriber/: main.go
(+57 files in other folders)
